@@ -1,3 +1,8 @@
+2015-11-19  Matthew Wahab  <matthew.wahab@arm.com>
+
+	* config/tc-aarch64.c (aarch64_archs): Add "armv8.2-a".
+	* doc/c-aarch64.texi (-march): Likewise.
+
 2015-07-16  Matthew Wahab  <matthew.wahab@arm.com>
 
 	* config/tc-arm.c (arm_fpus): Add crypto-neon-fp-armv8.1.
